--- a/Views/CVs/Details.cshtml
+++ b/Views/CVs/Details.cshtml
@@ -59,7 +59,7 @@
 
     </dl>
 </div>
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) 
 </p>
