--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -5,14 +5,13 @@
 }
 
 
-<h2>Create</h2>
+<h2>Create new project</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Project</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -31,7 +30,7 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+       @*<div class="form-group">
             @Html.LabelFor(model => model.CreatedBy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
