--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Projects</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 <table class="table">
     <tr>
         <th>
@@ -41,12 +41,22 @@
             }
             else
             {
-                @Html.ActionLink("Leave", "Leave", new { id = item.ID });
+                if (item.CreatedBy == User.Identity.Name)
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID });
+                }
+                else
+                {
+                    @Html.ActionLink("Leave", "Leave", new { id = item.ID });
+                }
+
             }
             |
             @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+            @if (item.CreatedBy == User.Identity.Name)
+            {
             @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-
+            }
         </td>
     </tr>
 }
