--- a/Views/CVs/Index.cshtml
+++ b/Views/CVs/Index.cshtml
@@ -4,10 +4,6 @@
     ViewBag.Title = "Index";
 }
 
-
-@*<p>
-    @Html.ActionLink("Create New", "Create")
-</p>*@
 <table class="table">
     <tr>
         <th>
@@ -28,41 +24,46 @@
         <th>
             @Html.DisplayNameFor(model => model.Competences)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Projects)
+        </th>
+       
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PhoneNumber)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Mail)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Education)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Workplace)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Competences)
-    </td>    <td>
-        @foreach (var items in item.Projects)
-        {
-            @Html.DisplayFor(modelItem => items.Title)
-        }
+  
 
-    </td>
-    @*<td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-    </td>*@
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Mail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Education)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Workplace)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Competences)
+            </td>
+            <td>
+                @foreach (var items in item.Projects)
+                {
+                    @Html.DisplayFor(modelItem => items.Title) <h5> </h5>
+                }
+
+
+            </td>
+       
+        </tr>
+    }
 
 </table>
