--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Projects", "Redirect", "Projects")</li>
+                        <li> <h5 id="unreadMsg"> Unread msg :  </h5></li>
+
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -39,16 +41,24 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-
-        @*<hr />*@
-        @*<footer>
-                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-            </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+
+    <script>
+        var loggedIn = @User.Identity.IsAuthenticated.ToString().ToLower();
+        if (loggedIn) {
+            $.get('/api/CountMsg/', function (data){
+                $('#unreadMsg').append(data);
+            })
+        }
+
+    </script>
+
+
     @Scripts.Render("~/bundles/jqueryval")
 </body>
 </html>
