--- a/Views/Messages/Create.cshtml
+++ b/Views/Messages/Create.cshtml
@@ -4,53 +4,56 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Skicka ett meddelande</h4>
-        <hr />
+<div class="form-horizontal">
+    <h4>Send a message</h4>
+    <hr />
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @ID = "CONTENT", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
-            </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @ID = "TITLE", @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
         </div>
-        
-        @if (Model.Sender != null)
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @ID = "SENDER", @class = "form-control", @readonly = "readonly" } })
-                    @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        }
-        else
-        {
-            <div class="form-group">
-                @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @ID = "SENDER", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        }
-
-        <div class="form-group">
-
-            <div class="col-md-10">
-                @Html.HiddenFor(model => model.Reciver)
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @ID = "CONTENT", @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
         </div>
-
-
     </div>
 
+    @if (Model.Sender != null)
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @ID = "SENDER", @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    }
+    else
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Sender, new { htmlAttributes = new { @ID = "SENDER", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    }
+    <div class="form-group">
+        <div class="col-md-10">
+            @Html.HiddenFor(model => model.Reciver)
+        </div>
+    </div>
+</div>
 }
 
-<button class="MessageSend" data-id="@Model.Reciver"> Skicka meddelande </button>
+<button class="MessageSend" data-id="@Model.Reciver"> Send message </button>
 
 
 
@@ -61,11 +64,12 @@
             var ReciverID = $(this).data('id');
             var content = $('#CONTENT').val();
             var sender = $('#SENDER').val();
+            var title = $('#TITLE').val();
             if (content.length < 3 || sender.length < 2) {
                 window.alert('Vänligen kontrollera fälten.')
             }
             else
-            $.get('/api/SendAPI/' + ReciverID + '/' + content + '/' + sender, function () {
+                $.get('/api/SendAPI/' + ReciverID + '/' + title + '/' + content + '/' + sender, function () { 
                 window.alert('Meddelandet har skickats');
                 window.location.reload();
             })
