--- a/Views/CVs/Edit.cshtml
+++ b/Views/CVs/Edit.cshtml
@@ -71,6 +71,16 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.PrivateProfile, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.PrivateProfile)
+                @Html.ValidationMessageFor(model => model.PrivateProfile, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Edit" class="btn btn-default" />
         </div>
