--- a/Views/CVs/Details.cshtml
+++ b/Views/CVs/Details.cshtml
@@ -10,7 +10,7 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
-        
+
         <dd>
             @if (!string.IsNullOrEmpty(Model.ImagePath))
             {
@@ -66,6 +66,11 @@
         <dd>
             @Html.DisplayFor(model => model.Competences)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Projects)
+        </dt>
+
         <dd>
             @foreach (var items in Model.Projects)
             {
@@ -76,9 +81,10 @@
     </dl>
 </div>
 
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.id })
+</p>
+
 <div>@{Html.RenderAction("Create", "Messages", new { id = Model.id });} </div>
 
 
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) 
-</p>
