--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,22 +3,25 @@
     ViewBag.Title = "Home Page";
 }
 
-<h2>Welcome to CV-site(n)</h2>
+<h2>Welcome to CV-siten</h2>
 <hr />
 
 <div>
     <div>
-        <h2>Cvs</h2>
+        <h3>Selection of members</h3>
 
         <ul>
             @foreach (var item in ViewBag.Name)
             {
                 <li>@item</li>
 
-          
+
 
             }
         </ul>
+
+        <h3>Selection of projects</h3>
+
         <ul>
             @foreach (var item in ViewBag.projectTitle)
             {
