--- a/Views/Messages/Index.cshtml
+++ b/Views/Messages/Index.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Index</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 <table class="table">
     <tr>
         <th>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.Sender)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MessageId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MessageId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MessageId })
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.MessageId }) |*@
+            @Html.ActionLink("Details", "Details", new { id=item.MessageId }) 
+            @*@Html.ActionLink("Delete", "Delete", new { id=item.MessageId })*@
         </td>
     </tr>
 }
