--- a/Views/Messages/Create.cshtml
+++ b/Views/Messages/Create.cshtml
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    @*@if (Model.Sender != null)
+    @if (Model.Sender != null)
     {
         <div class="form-group">
             @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -34,8 +34,8 @@
                 @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
             </div>
         </div>
-    }*@
-    @*else
+    }
+    else
     {
         <div class="form-group">
             @Html.LabelFor(model => model.Sender, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -44,7 +44,7 @@
                 @Html.ValidationMessageFor(model => model.Sender, "", new { @class = "text-danger" })
             </div>
         </div>
-    }*@
+    }
     <div class="form-group">
         <div class="col-md-10">
             @Html.HiddenFor(model => model.Reciver)
@@ -66,11 +66,11 @@
             var sender = $('#SENDER').val();
             var title = $('#TITLE').val();
             if (content.length < 3 || sender.length < 2) {
-                window.alert('Please check all fields')
+                window.alert('Vänligen kontrollera fälten.')
             }
             else
                 $.get('/api/SendAPI/' + ReciverID + '/' + title + '/' + content + '/' + sender, function () { 
-                window.alert('Message sent');
+                window.alert('Meddelandet har skickats');
                 window.location.reload();
             })
         });
