--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
 
                     <li>@Html.ActionLink("Search", "NameSearchForm", "CVs")</li>
                     @if (User.Identity.IsAuthenticated)
@@ -31,9 +30,10 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Projects", "Redirect", "Projects")</li>
-                        <li> <h5 id="unreadMsg"> Unread msg :  </h5></li>
+                        <li>@Html.ActionLink("Unread messages", "Index", "Messages")</li>
+                                        <li> <h5 id="unreadMsg">: </h5></li>
 
-                    }
+                                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
