--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,15 +25,16 @@
                     <li>@Html.ActionLink("Search", "NameSearchForm", "CVs")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("CV", "Create", "CVs")</li>
+                        <li>@Html.ActionLink("Your CV", "Create", "CVs")</li>
                     }
                     @if (User.Identity.IsAuthenticated)
                     {
+                        <li>@Html.ActionLink("Find members", "Index", "CVs")</li>
                         <li>@Html.ActionLink("Projects", "Redirect", "Projects")</li>
                         <li>@Html.ActionLink("Unread messages", "Index", "Messages")</li>
-                                        <li> <h5 id="unreadMsg">: </h5></li>
+                        <li> <h5 id="unreadMsg">: </h5></li>
 
-                                    }
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
