--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using CVSITEHT2021.Repo
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,7 +33,7 @@
                         <li>@Html.ActionLink("Find members", "Index", "CVs")</li>
                         <li>@Html.ActionLink("Projects", "Redirect", "Projects")</li> 
                         <li>@Html.ActionLink("Unread messages", "Index", "Messages")</li>
-                        <li> <h5 id="unreadMsg">: </h5></li>
+                        <li id="unreadMsg">:</li>
 
                     }
                 </ul>
